Add header styles

--- a/proyecto1-juanMaravilloso/index.html
+++ b/proyecto1-juanMaravilloso/index.html
@@ -14,8 +14,7 @@
 </head>
 
 <body>
-    <!-- TODO Create container for lateral margins everywhere -->
-    <!--div class="container"-->
+
     <nav class="rectangle">
         <!-- TODO check tag -->
         <p class="juan-maravilloso">Juan Maravilloso</p>
@@ -32,69 +31,69 @@
         </div> <!-- .nav-elements -->
     </nav> <!-- .rectangle -->
 
-    <header>
-        <p class="welcome-message">¡Hola!</p>
-        <h1 class="soy-juan-desarrolla">Soy Juan, desarrollador web</h1>
-        <!-- To contact page -->
-        <a class="button" href="#">¿Hablamos?</a>
-    </header> <!-- .mainpage -->
+    <div class="container">
+        <header>
+            <p class="welcome-message">¡Hola!</p>
+            <h1 class="soy-juan-desarrolla">Soy Juan, desarrollador web</h1>
+            <!-- To contact page -->
+            <a class="button" href="#">¿Hablamos?</a>
+        </header> <!-- .mainpage -->
 
-    <main>
-        <section id="sobre-mi">
-            <h2>Sobre mí</h2>
-            <p class="top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                incididunt ut labore
-                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                aliquip ex ea commodo consequat.</p>
-            <p class="bottom-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla
-                pariatur.</p>
-            <iframe src="https://www.youtube.com/embed/RzClCJFpSoM"
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
-        </section> <!-- .sobre-mi -->
+        <main>
+            <section id="sobre-mi">
+                <h2>Sobre mí</h2>
+                <p class="top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                    incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat.</p>
+                <p class="bottom-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat nulla
+                    pariatur.</p>
+                <iframe src="https://www.youtube.com/embed/RzClCJFpSoM"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </section> <!-- .sobre-mi -->
 
-        <section id="habilidades">
-            <h2>Habilidades</h2>
+            <section id="habilidades">
+                <h2>Habilidades</h2>
 
-            <div class="skill">
-                <h3>Front-end developer</h3>
+                <div class="skill">
+                    <h3>Front-end developer</h3>
 
-                <h4>Lenguajes</h4>
-                <p>HTML, CSS, JavaScript</p>
+                    <h4>Lenguajes</h4>
+                    <p>HTML, CSS, JavaScript</p>
 
-                <h4>Dev tools</h4>
-                <ul>
-                    <li>Atom</li>
-                    <li>Bootstrap</li>
-                    <li>Github</li>
-                    <li>Gitlab</li>
-                    <li>Terminal</li>
-                </ul>
-            </div> <!-- .skill -->
+                    <h4>Dev tools</h4>
+                    <ul>
+                        <li>Atom</li>
+                        <li>Bootstrap</li>
+                        <li>Github</li>
+                        <li>Gitlab</li>
+                        <li>Terminal</li>
+                    </ul>
+                </div> <!-- .skill -->
 
-            <div class="skill">
-                <h3>Back-end developer</h3>
+                <div class="skill">
+                    <h3>Back-end developer</h3>
 
-                <h4>Lenguajes</h4>
-                <p>Java, Node.js, Python, PHP</p>
+                    <h4>Lenguajes</h4>
+                    <p>Java, Node.js, Python, PHP</p>
 
-                <h4>Dev tools</h4>
-                <ul>
-                    <li>Angular</li>
-                    <li>Github</li>
-                    <li>Docker</li>
-                    <li>XAMPP</li>
-                </ul>
-            </div> <!-- .skill -->
-        </section>
+                    <h4>Dev tools</h4>
+                    <ul>
+                        <li>Angular</li>
+                        <li>Github</li>
+                        <li>Docker</li>
+                        <li>XAMPP</li>
+                    </ul>
+                </div> <!-- .skill -->
+            </section>
 
-        <footer>
-            &copy; 2019 Juan Maravilloso
-        </footer>
-    </main>
-    <!--/div-->
-    <!-- .container -->
+            <footer>
+                &copy; 2019 Juan Maravilloso
+            </footer>
+        </main>
+    </div> <!-- .container -->
 </body>
 
 </html>
