Add 2 sections styles
Add sobre mi and habilidades styles

--- a/proyecto1-juanMaravilloso/index.html
+++ b/proyecto1-juanMaravilloso/index.html
@@ -31,32 +31,32 @@
         </div> <!-- .nav-elements -->
     </nav> <!-- .rectangle -->
 
-    <div class="container">
-        <header>
-            <p class="welcome-message">¡Hola!</p>
-            <h1 class="soy-juan-desarrolla">Soy Juan, desarrollador web</h1>
-            <!-- To contact page -->
-            <a class="button" href="#">¿Hablamos?</a>
-        </header> <!-- .mainpage -->
+    <header>
+        <p class="welcome-message">¡Hola!</p>
+        <h1 class="soy-juan-desarrolla">Soy Juan, desarrollador web</h1>
+        <!-- To contact page -->
+        <a class="button" href="#">¿Hablamos?</a>
+    </header> <!-- .mainpage -->
 
-        <main>
-            <section id="sobre-mi">
-                <h2>Sobre mí</h2>
-                <p class="top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                    incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
-                <p class="bottom-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat nulla
-                    pariatur.</p>
-                <iframe src="https://www.youtube.com/embed/RzClCJFpSoM"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
-            </section> <!-- .sobre-mi -->
+    <main>
+        <section id="sobre-mi">
+            <h2>Sobre mí</h2>
+            <p class="top-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                incididunt ut labore
+                et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                aliquip ex ea commodo consequat.</p>
+            <p class="bottom-text">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla
+                pariatur.</p>
+            <iframe src="https://www.youtube.com/embed/RzClCJFpSoM"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </section> <!-- .sobre-mi -->
 
-            <section id="habilidades">
-                <h2>Habilidades</h2>
+        <section id="habilidades">
+            <h2>Habilidades</h2>
 
+            <div class="scrollable">
                 <div class="skill">
                     <h3>Front-end developer</h3>
 
@@ -87,13 +87,13 @@
                         <li>XAMPP</li>
                     </ul>
                 </div> <!-- .skill -->
-            </section>
+            </div> <!-- .scrollable -->
+        </section>
 
-            <footer>
-                &copy; 2019 Juan Maravilloso
-            </footer>
-        </main>
-    </div> <!-- .container -->
+        <footer>
+            &copy; 2019 Juan Maravilloso
+        </footer>
+    </main>
 </body>
 
 </html>
