Add footer stylesç

--- a/proyecto1-juanMaravilloso/index.html
+++ b/proyecto1-juanMaravilloso/index.html
@@ -91,7 +91,7 @@
         </section>
 
         <footer>
-            &copy; 2019 Juan Maravilloso
+            <p>&copy; 2019 Juan Maravilloso</p>
         </footer>
     </main>
 </body>
