Fonts and icons

--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -5,13 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Juan Maravilloso</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto:300,400,500&display=swap" rel="stylesheet">
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
     <header>
         <h2>Juan Maravilloso</h2>
-        <!-- TODO add menu icon -->
-        <!-- TODO add close icon -->
+        <i class="material-icons">
+            menu
+        </i>
+        <i class="material-icons">
+            close
+        </i>
         <nav>
             <ul>
                 <li>Sobre mí</li>
