--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -9,10 +9,12 @@
     <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto:300,400,500&display=swap" rel="stylesheet">
     <!-- Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- CSS -->
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 
 <body>
-    <header>
+    <header class="wrapper">
         <h2>Juan Maravilloso</h2>
         <i class="material-icons">
             menu
@@ -31,17 +33,17 @@
 
     <main>
         <article>
-            <section id="summary">
+            <section class="wrapper" id="summary">
                 <p>¡HOLA!</p>
                 <h1>
                     Soy Juan,
                     desarrollador
                     web
                 </h1>
-                <a href="#">¿Hablamos?</a>
+                <a class="button" href="#">¿Hablamos?</a>
             </section>
 
-            <section id="about-me">
+            <section class="wrapper" id="about-me">
                 <h2>Sobre mí</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                     et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
@@ -53,7 +55,7 @@
                     allowfullscreen></iframe>
             </section>
 
-            <section id="skills">
+            <section class="wrapper" id="skills">
                 <h2>Habilidades</h2>
                 <div class="list">
                     <div class="skill">
@@ -87,7 +89,7 @@
         </article>
     </main>
 
-    <footer>
+    <footer class="wrapper">
         <p>&copy; 2019 Juan maravilloso </p>
     </footer>
 </body>
