--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -16,10 +16,10 @@
 <body>
     <header class="wrapper">
         <h2>Juan Maravilloso</h2>
-        <i class="material-icons">
+        <i id="icon-open" class="material-icons">
             menu
         </i>
-        <i class="material-icons">
+        <i id="icon-close" class="material-icons">
             close
         </i>
         <nav>
@@ -45,8 +45,10 @@
 
             <section class="wrapper" id="about-me">
                 <h2>Sobre mí</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                    labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                    ut
                     aliquip ex ea commodo consequat.</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur.</p>
