--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="wrapper">
+    <header class="wrapper nav-open">
         <h2>Juan Maravilloso</h2>
         <i id="icon-open" class="material-icons">
             menu
