--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -52,9 +52,11 @@
                     aliquip ex ea commodo consequat.</p>
                 <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
                     pariatur.</p>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/RzClCJFpSoM" frameborder="0"
-                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen></iframe>
+                <div class="videoWrapper">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/RzClCJFpSoM" frameborder="0"
+                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen></iframe>
+                </div>
             </section>
 
             <section class="wrapper" id="skills">
