Add scroll in skills

--- a/juanmaravilloso/index.html
+++ b/juanmaravilloso/index.html
@@ -59,7 +59,7 @@
                 </div>
             </section>
 
-            <section class="wrapper" id="skills">
+            <section id="skills">
                 <h2>Habilidades</h2>
                 <div class="list">
                     <div class="skill">
