--- a/JuanMaravillosoProject/juanmaravilloso/index.html
+++ b/JuanMaravillosoProject/juanmaravilloso/index.html
@@ -24,9 +24,9 @@
         </i>
         <nav>
             <ul>
-                <li>Sobre mí</li>
-                <li>Habilidades</li>
-                <li>Contáctame</li>
+                <li><a href="#about-me">Sobre mí</a></li>
+                <li><a href="#skills">Habilidades</a></li>
+                <li><a href="contact.html">Contáctame</a></li>
             </ul>
         </nav>
     </header>
