--- a/JuanMaravillosoProject/layout-solution/index.html
+++ b/JuanMaravillosoProject/layout-solution/index.html
@@ -10,6 +10,8 @@
 
     <link href="main.css" rel="stylesheet">
     <title>Juan maravilloso</title>
+
+    <script src="main.js" tyoe="application/JavaScript" defer></script>
 </head>
 
 <body>
