Change comment in loops2 exercise

--- a/practice-js/looping-code/loops2/index.html
+++ b/practice-js/looping-code/loops2/index.html
@@ -53,7 +53,7 @@
     // while (name !== phonebook[i].name) {
     //     i++;
     // }
-    // // Condition phonebook.length > i
+    // // Condition for this
     // para.append(`${phonebook[i].name} ${phonebook[i].number}`);
 
     // Don't edit the code below here!
