Add dynamic button text change

--- a/promise-prac/index.html
+++ b/promise-prac/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contador</title>
+    <script src="main.js" type="application/javascript" defer></script>
 </head>
 
 <body>
