--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Task Manager</title>
+
+    <!-- Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
 <body>
@@ -21,7 +24,9 @@
                 <input id="task-checkbox1" name="task" type="checkbox" maxlength="30">
                 Task 1
             </label>
-            <!-- TODO Add delete icon -->
+            <a href="#">
+                <i class="material-icons">delete_outline</i>
+            </a>
         </div>
 
         <hr>
