Add confirm dialog

--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -11,6 +11,14 @@
 </head>
 
 <body>
+    <dialog id="confirm-dialog">
+        <p class="question">¿Estás seguro de que deseas eliminar esta tarea?</p>
+        <!-- Task example -->
+        <p>Task 1</p>
+        <a class="button" href="#">Sí</a>
+        <a class="button" href="#">No</a>
+    </dialog>
+
     <h1>Administrador de tareas</h1>
 
     <main class="task-container">
