--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -8,6 +8,9 @@
 
     <!-- Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -32,7 +35,9 @@
                 <input id="task-checkbox" name="task" type="checkbox" maxlength="30">
                 Task 1
             </label>
-            <i class="material-icons">delete_outline</i>
+            <a href="#">
+                <i class="material-icons">delete_outline</i>
+            </a>
         </div>
 
         <hr>
