Change div to ul of tasks

--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -33,15 +33,18 @@
         <hr>
 
         <!-- Tasks example -->
-        <div class="task-wrapper">
-            <label>
-                <input id="task-checkbox" name="task" type="checkbox" maxlength="30">
-                Task 1
-            </label>
-            <a href="#">
-                <i class="material-icons">delete_outline</i>
-            </a>
-        </div>
+        <ul class="task-list">
+            <li>
+                <label>
+                    <input id="task-checkbox" name="task" type="checkbox" maxlength="30">
+                    Task 1
+                </label>
+
+                <a href="#">
+                    <i class="material-icons">delete_outline</i>
+                </a>
+            </li>
+        </ul>
 
         <hr>
 
