Add header to HTML structure

--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -25,7 +25,9 @@
         <button>No</button>
     </dialog>
 
-    <h1>Administrador de tareas</h1>
+    <header>
+        <h1>Administrador de tareas</h1>
+    </header>
 
     <main class="task-container">
         <input id="task-input" name="task-entered" type="text" placeholder="¿Qué necesitas hacer?">
