--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -13,7 +13,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link rel="stylesheet" href="css/styles.css">
+    <link  href="css/styles.css" rel="stylesheet">
 </head>
 
 <body>
