--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -29,7 +29,7 @@
         <h1>Administrador de tareas</h1>
     </header>
 
-    <main class="task-container">
+    <main>
         <input id="task-input" name="task-entered" type="text" placeholder="¿Qué necesitas hacer?">
 
         <!-- Tasks example -->
@@ -40,9 +40,7 @@
                     Task 1
                 </label>
 
-                <a href="#">
-                    <i class="material-icons">delete_outline</i>
-                </a>
+                <i class="material-icons">delete_outline</i>
             </li>
         </ul>
 
