--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -21,8 +21,8 @@
         <p class="question">¿Estás seguro de que deseas eliminar esta tarea?</p>
         <!-- Task example -->
         <p>Task 1</p>
-        <button>Sí</button>
-        <button>No</button>
+        <button class="button">Sí</button>
+        <button class="button">No</button>
     </dialog>
 
     <header>
@@ -47,9 +47,11 @@
         <div class="task-management">
             <p>Quedan 0 tareas</p>
 
-            <button>Todas</button>
-            <button>Pendientes</button>
-            <button>Completadas</button>
+            <div class="buttons">
+                <button class="button">Todas</button>
+                <button class="button">Pendientes</button>
+                <button class="button">Completadas</button>
+            </div>
         </div>
     </main>
 
