Add modal styles

--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -13,7 +13,8 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap" rel="stylesheet">
 
     <!-- Styles -->
-    <link href="css/styles.css" rel="stylesheet">
+    <!-- TODO Ask if it is the best practice -->
+    <link href="../src/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -48,7 +49,7 @@
             <p>Quedan 0 tareas</p>
 
             <div class="buttons">
-                <button class="button">Todas</button>
+                <button class="button" disabled>Todas</button>
                 <button class="button">Pendientes</button>
                 <button class="button">Completadas</button>
             </div>
