Add line-through to task when checked

--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -39,17 +39,7 @@
     <main>
         <input id="task-input" name="task-entered" type="text" placeholder="¿Qué necesitas hacer?">
 
-        <!-- Tasks example -->
-        <ul class="task-list">
-            <li>
-                <label>
-                    <input id="task-checkbox" name="task" type="checkbox" maxlength="30">
-                    Task 1
-                </label>
-
-                <i class="material-icons">delete_outline</i>
-            </li>
-        </ul>
+        <ul class="task-list"></ul>
 
         <div class="task-management">
             <p>Quedan 0 tareas</p>
