--- a/Task-Manager/src/index.html
+++ b/Task-Manager/src/index.html
@@ -42,7 +42,7 @@
         <ul class="task-list"></ul>
 
         <div class="task-management">
-            <p>Quedan 0 tareas</p>
+            <p id="numTasks">Quedan 0 tareas</p>
 
             <div class="buttons">
                 <button class="button" disabled>Todas</button>
