--- a/react/my-first-react-app/public/index.html
+++ b/react/my-first-react-app/public/index.html
@@ -24,7 +24,7 @@
     -->
 
   <!-- Icons -->
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>React App</title>
 </head>
 
